Closed
Bug 583872
Opened 12 years ago
Closed 12 years ago
MozQWidget crashes if touch is received after it's nsWindow destroyed
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: tatiana, Unassigned)
References
Details
Attachments
(2 files, 1 obsolete file)
8.56 KB,
text/plain
|
Details | |
846 bytes,
patch
|
romaxa
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.2.8) Gecko/20100723 Ubuntu/10.04 (lucid) Firefox/3.6.8 Build Identifier: Trunk bug was originally reproduced with liqmozembed test app while browsing youtube in touch screen device Reproducible: Always Steps to Reproduce: 1. load some youtube video 2. tap some another video link 3. repeatedly tap moz widget's area while page is loading Actual Results: crash in 1/3 cases Expected Results: no crash, page is loaded
Reporter | ||
Updated•12 years ago
|
Hardware: Other → ARM
Version: unspecified → Trunk
Reporter | ||
Comment 1•12 years ago
|
||
Reporter | ||
Comment 2•12 years ago
|
||
Attachment #462202 -
Flags: review?(romaxa)
Comment 3•12 years ago
|
||
Comment on attachment 462202 [details] [diff] [review] bmo583872_event_after_nsWindow_destroy.diff "since it's possible" please add comment why it is possible, I think it is possible because of deleteLater call is used
Reporter | ||
Comment 4•12 years ago
|
||
corrected
Attachment #462202 -
Attachment is obsolete: true
Attachment #462202 -
Flags: review?(romaxa)
Reporter | ||
Updated•12 years ago
|
Attachment #462237 -
Flags: review?(romaxa)
Comment 5•12 years ago
|
||
Comment on attachment 462237 [details] [diff] [review] bmo583872_event_after_nsWindow_destroy.diff I think it is valid check
Attachment #462237 -
Flags: review?(romaxa) → review+
Comment 6•12 years ago
|
||
Yep, I've seen also some similar crashes on normal fennec too.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 7•12 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/07133c906962
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•4 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•