Bug 583872 - MozQWidget crashes if touch is received after its nsWindow destroyed. r=romaxa

--HG--
extra : rebase_source : ec735055da570c4336b4f72562ca8702c4c1d5ed